Add DateTimeOffset support to grid filtering
Extended grid components and utilities to support filtering by DateTimeOffset properties. Updated filter UI, expression builders, and type mappings to handle DateTimeOffset, including nullable types. Also improved property expression resolution for nested properties in filter expressions.

--- a/blazorbootstrap/Components/Grid/GridColumnFilter.razor
+++ b/blazorbootstrap/Components/Grid/GridColumnFilter.razor
@@ -48,6 +48,10 @@
     {
         <input class="form-control" style="@filterStyle" type="datetime-local" value="@filterValue" @oninput="@(async args => await OnFilterValueChangedAsync(args))" />
     }
+    else if (PropertyTypeName == StringConstants.PropertyTypeNameDateTimeOffset)
+    {
+        <input class="form-control" style="@filterStyle" type="datetime-local" value="@filterValue" @oninput="@(async args => await OnFilterValueChangedAsync(args))" />
+    }
     else if (PropertyTypeName == StringConstants.PropertyTypeNameBoolean)
     {
         <input class="form-check-input" type="checkbox" value="@filterValue" @onchange="@(async args => await OnFilterValueChangedAsync(args))" />
